[gd_scene load_steps=4 format=2]

[ext_resource path="res://Browser/Browser.gd" type="Script" id=1]
[ext_resource path="res://GocoNet/GocoNet.gd" type="Script" id=2]
[ext_resource path="res://UI/Theme.tres" type="Theme" id=3]

[node name="Browser" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8
script = ExtResource( 1 )

[node name="GocoNet" type="HTTPRequest" parent="."]
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 312.0
margin_bottom = 232.0

[node name="GameList" type="ItemList" parent="HBoxContainer"]
margin_right = 150.0
margin_bottom = 224.0
size_flags_horizontal = 3

[node name="GameInfo" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 154.0
margin_right = 304.0
margin_bottom = 224.0
size_flags_horizontal = 3

[node name="Title" type="Label" parent="HBoxContainer/GameInfo"]
margin_right = 150.0
margin_bottom = 13.0
text = "The Game Title"
align = 1

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/GameInfo"]
margin_top = 17.0
margin_right = 150.0
margin_bottom = 21.0

[node name="Version" type="HBoxContainer" parent="HBoxContainer/GameInfo"]
margin_top = 25.0
margin_right = 150.0
margin_bottom = 38.0

[node name="Label" type="Label" parent="HBoxContainer/GameInfo/Version"]
margin_right = 45.0
margin_bottom = 13.0
text = "Version: "

[node name="VersionValue" type="Label" parent="HBoxContainer/GameInfo/Version"]
margin_left = 49.0
margin_right = 55.0
margin_bottom = 13.0
text = "1"

[node name="Author" type="HBoxContainer" parent="HBoxContainer/GameInfo"]
margin_top = 42.0
margin_right = 150.0
margin_bottom = 55.0

[node name="Label" type="Label" parent="HBoxContainer/GameInfo/Author"]
margin_right = 41.0
margin_bottom = 13.0
text = "Author: "

[node name="VersionValue" type="Label" parent="HBoxContainer/GameInfo/Author"]
margin_left = 45.0
margin_right = 111.0
margin_bottom = 13.0
text = "Author Value"
